--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "Lonar-markate-place-backend",
     "builds": [
-      { "src": "src/index.js", "use": "@vercel/node" }
+      { "src": "./src/index.js", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "src/index.js" }
