--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,19 @@
     "name": "Lonar-markate-place-backend",
     "builds": [
       { "src": "./src/index.js", "use": "@vercel/node" }
+      ,
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
+
     ],
     "routes": [
       { "src": "/(.*)", "dest": "src/index.js" }
+      ,
+    {
+      "src": "/(.+\\.[a-z]+)$",
+      "dest": "/public/$1"
+    }
     ]
   }
